--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ repositories {
 ext {
 	swaggerVersion = '2.2.7'
 	springdocOpenapiVersion = '1.6.9'
-	vavrVersion = '0.9.0'
+	jpamodelgenVersion = '5.4.28.Final'
 }
 
 apply from: "flyway/dev-flyway.gradle"
@@ -30,9 +30,9 @@ dependencies {
 	implementation "org.mapstruct:mapstruct:1.5.1.Final"
 	implementation "io.swagger.core.v3:swagger-annotations:$swaggerVersion"
 	implementation "org.springdoc:springdoc-openapi-ui:$springdocOpenapiVersion"
-	implementation "io.vavr:vavr:$vavrVersion"
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 	annotationProcessor "org.mapstruct:mapstruct-processor:1.5.1.Final"
+	annotationProcessor "org.hibernate:hibernate-jpamodelgen:$jpamodelgenVersion"
 
 	testCompileOnly 'org.projectlombok:lombok:1.18.24'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
