New application started. Small piece of code for the beginning

--- a/flyway/prod-flyway.gradle
+++ b/flyway/prod-flyway.gradle
@@ -3,6 +3,7 @@ project.ext['flyway.url'] = ''
 project.ext['flyway.user'] = ''
 project.ext['flyway.password'] = ''
 project.ext['flyway.schemas'] = ''
+project.ext['flyway.placeholders.current_schema'] = ''
 project.ext['flyway.outOfOrder'] = true
 project.ext['flyway.cleanDisabled'] = false
 project.ext['flyway.locations'] = ""
