--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-	id 'org.flywaydb.flyway' version '9.0.4'
+    id "java"
+	id "org.flywaydb.flyway" version "9.0.4"
 }
 
 group = 'ru.strawberry'
@@ -7,16 +8,30 @@ version = '0.0.1-SNAPSHOT'
 
 repositories {
 	mavenCentral()
-	maven {
-		url 'https://repo.spring.io/milestone'
-	}
 }
 
 ext {
 	telegramBotsVersion = "6.9.0"
-	springContextVersion = "5.3.23"
-	springWebFluxVersion = "3.2.5"
 	jacksonVersion = "2.17.2"
 }
 
+dependencies {
+	implementation "org.telegram:telegrambots:$telegramBotsVersion"
+	implementation "org.hibernate:hibernate-core:5.6.15.Final"
+	implementation "org.postgresql:postgresql:42.7.3"
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
+
+}
+
 apply from: "flyway/dev-flyway.gradle"
+
+jar {
+	manifest {
+		attributes "Main-Class": "ru.strawberry.boardgame.Application"
+	}
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+
+	from {
+		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+	}
+}
