--- a/build.gradle
+++ b/build.gradle
@@ -13,14 +13,22 @@ repositories {
 ext {
 	telegramBotsVersion = "6.9.0"
 	jacksonVersion = "2.17.2"
+	redisVersion = "5.2.0"
+	hibernateVersion = "5.6.15.Final"
+	postgresqlVersion = "42.7.3"
 }
 
 dependencies {
 	implementation "org.telegram:telegrambots:$telegramBotsVersion"
-	implementation "org.hibernate:hibernate-core:5.6.15.Final"
-	implementation "org.postgresql:postgresql:42.7.3"
-	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
+	implementation "org.hibernate:hibernate-core:$hibernateVersion"
+	implementation "org.postgresql:postgresql:$postgresqlVersion"
+	implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
+	implementation "redis.clients:jedis:$redisVersion"
+	implementation "org.slf4j:slf4j-api:2.0.16"
+	implementation "org.slf4j:slf4j-simple:2.0.16"
 
+	compileOnly "org.projectlombok:lombok:1.18.22"
+	annotationProcessor "org.projectlombok:lombok:1.18.22"
 }
 
 apply from: "flyway/dev-flyway.gradle"
