--- a/flyway/dev-flyway.gradle
+++ b/flyway/dev-flyway.gradle
@@ -1,8 +1,9 @@
 project.ext['flyway.driver'] = 'org.postgresql.Driver'
-project.ext['flyway.url'] = ''
-project.ext['flyway.user'] = ''
-project.ext['flyway.password'] = ''
-project.ext['flyway.schemas'] = ''
+project.ext['flyway.url'] = "${flyway.url}"
+project.ext['flyway.user'] = "${flyway.user}"
+project.ext['flyway.password'] = "${flyway.password}"
+project.ext['flyway.schemas'] = "${flyway.schemas[0]}"
+project.ext['flyway.placeholders.current_schema'] = "${flyway.placeholders.get("current_schema")}"
 project.ext['flyway.outOfOrder'] = true
 project.ext['flyway.cleanDisabled'] = false
-project.ext['flyway.locations'] = ""
+project.ext['flyway.locations'] = "filesystem:${project.projectDir}/src/main/resources/db/migrations"
